# autosplitters-wasm

./: .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: build.yml  release.yml  test.yml
bread_and_fred/: Cargo.toml
bread_and_fred/src/: lib.rs  memory.rs  settings.rs
cuphead/: Cargo.toml  README.md
cuphead/src/: classes.rs  enums.rs  game_objects.rs  lib.rs  memory.rs  settings.rs  util.rs
dismantled/: Cargo.toml
dismantled/src/: lib.rs
doom_the_dark_ages/: Cargo.toml
doom_the_dark_ages/src/: lib.rs  physics.rs  player.rs
helpers/: Cargo.toml
helpers/src/: lib.rs  memory.rs  pointer.rs  settings.rs  try_load.rs
helpers/src/watchers/: gba.rs  mod.rs  pointer_path.rs  unity.rs
i_am_your_beast/: Cargo.toml
i_am_your_beast/src/: lib.rs  memory.rs  settings.rs
idtech/: Cargo.toml
idtech/src/: lib.rs
idtech/src/typeinfo/: class.rs  mod.rs
kuru-kuru-kururin/: Cargo.toml
kuru_kuru_kururin/: Cargo.toml
kuru_kuru_kururin/src/: lib.rs  memory.rs
livesplit-hwwbd/: Cargo.toml
selaco/: Cargo.toml
selaco/src/: lib.rs
snap_the_sentinel/: Cargo.toml
snap_the_sentinel/src/: lib.rs
test_project/: Cargo.toml
test_project/src/: lib.rs
zdoom/: Cargo.toml
zdoom/src/: level.rs  lib.rs  pclass.rs  player.rs  tarray.rs
