[workspace]
resolver = "2"
members = [
    "cuphead",
    "dismantled",
    "doom_the_dark_ages",
    "helpers",
    "i_am_your_beast",
    "idtech",
    "kuru_kuru_kururin",
    "selaco",
    "snap_the_sentinel",
    "test_project",
    "zdoom"
]

[build]
rustflags = ["-Aclippy::field_is_never_read"]

[workspace.dependencies]
#asr = { git = "https://github.com/AlexKnauth/asr", branch = "mono-4" }
#asr = { git = "https://github.com/mitchell-merry/asr", branch = "mitchell-merry/version-detect-fixes" }
asr = { path = "../asr" }
