[workspace]
resolver = "2"
members = [
    "cuphead",
    "dismantled",
    "doom_the_dark_ages",
    "helpers",
    "i_am_your_beast",
    "idtech",
    "kuru_kuru_kururin",
    "selaco",
    "snap_the_sentinel",
    "test_project",
    "zdoom"
]

[workspace.dependencies]
asr = { git = "https://github.com/mitchell-merry/asr", branch = "some-helpers" }
#asr = { path = "../asr" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
