[package]
name = "kuru_kuru_kururin"
version = "0.1.0"
edition = "2021"

[dependencies]
asr = { workspace = true, features = ["derive", "gba", "signature"] }
bitflags = { version = "2.9.3", features = ["bytemuck"] }
bytemuck = "1.23.1"
helpers = { path = "../helpers", features = ["gba"] }

[lib]
crate-type = ["cdylib"]
