[package]
name = "selaco"
version = "0.1.0"
edition = "2021"

[dependencies]
asr = { git = "https://github.com/mitchell-merry/asr", branch = "mgba-mac", features = [ "derive" ] }
helpers = { path = "../helpers" }
zdoom = { path = "../zdoom" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
